2004-01-01
    * Merged Curt's changes for MSW compilation


2003-12-29
    * Added events sample (in etc)
    * Ran convert-repo on darcs source code repository
    * Now support almost all methods of Wx::Font, along with 
        the related constants
    * Added font.rb sample to etc, written by Nobuaki Arima
    

2003-12-12 20:15  kbs
    * Modified drop targets (text and file) to only allow
        nil or false to reject the drop, or true to accept.
        Any other value raises an exception, because it 
        would be dangerous to accidentally report that you 
        had accepted a file that was being moved with a 
        drag operation if you intended to reject it.
    * Updated dndtext sample to return true instead of 1 
        in the drop handler. Updated the text output of 
        both the dndtext and dndfile samples.
        

2003-12-07 19:45  kbs
    * Add images sample
    * Update all samples to define App#on_init instead of OnInit
    

2003-12-07 19:30  kbs
    * Integrated File drag-and-drop, and two more dnd samples 
      from Gergely Kontra


2003-11-30 17:00  kbs
    * Added missing drag-and-drop constants
    * Fixed ListCtrl::get_item_text (it was returning the row number 
        instead of the text)
    * Fixed the TextDropTarget virtual call back return value
    * Added samples/etc/dragdrop.rb sample to demonstrate the 
        drag and drop classes
    * App now tried to call on_init first, but still falls back 
        to the now-deprecated OnInit if necessary
        [Note: All the samples should be changed to define
        on_init instead of OnInit]


2003-11-30 15:00  kbs
    * Fixed compile warnings in 25 cpp files
    
    
2003-11-20 22:30  kbs
    * Fixed compile errors:
        * Disable xrc by default
        * Add missing dependencies in depends
        * Add missing dependencies in 'tclean' target


2003-11-20 20:00  kbs
    * Merged more changes from Nicolas Kral, including:
        * Fixes for building under MSV6