@@ -22,6 +22,7 @@ public:
     static VALUE init0(const wxDateTime &dateTime);
     static VALUE GetDay(VALUE self);
     static VALUE Today(VALUE self);
+    static VALUE IsValid(VALUE self);
     
     static VALUE FormatISODate(VALUE self);
 	static VALUE ToTime(VALUE self);
